--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "prisma:dev:deploy": "npx prisma migrate deploy",
     "db:dev:remove": "docker compose rm dev-database --stop --force --volumes",
     "db:dev:create": "docker compose up dev-database --detach",
-    "db:dev:restart": "npm run db:dev:remove && npm run db:dev:create && npm run prisma:dev:deploy",
+    "db:dev:restart": "npm run db:dev:remove && npm run db:dev:create && sleep 2 && npm run prisma:dev:deploy",
+    "prisma:test:deploy": "dotenv -e .env.test npx prisma migrate deploy",
+    "pretest:e2e": "npm run db:test:restart",
+    "db:test:remove": "docker compose rm test-database --stop --force --volumes",
+    "db:test:create": "docker compose up test-database --detach",
+    "db:test:restart": "npm run db:test:remove && npm run db:test:create && sleep 2 && npm run prisma:test:deploy",
+    "test:e2e": "jest --config ./test/jest-e2e.json",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -20,8 +26,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -34,6 +39,8 @@
     "argon2": "^0.31.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
+    "dotenv-cli": "^7.3.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
@@ -56,6 +63,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.5.0",
+    "pactum": "^3.5.1",
     "prettier": "^2.3.2",
     "prisma": "^5.3.1",
     "source-map-support": "^0.5.20",
